--- a/BioSB_2019.ipynb
+++ b/BioSB_2019.ipynb
@@ -24,18 +24,7 @@
    },
    "source": [
     "#### <font color='#B9770E' size = 6><b> I. Converting FASTA to Json formatted file:  </b></font> \n",
-    "##### The web APIs support only JSON format but FASTA is the most common format in bioinformatics databases \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### <center><font color='2471A3' size = 6><b> The fasta2json Function</b></font></center>\n",
+    "##### The web APIs support only JSON format but FASTA is the most common format in bioinformatics databases \n",
     "#### <font color='2471A3' size = 5>The Steps:</font>\n",
     "#### The function accepts a FASTA file as input and return a JSON file as output.\n",
     "###### <font color='2471A3' size = 4.5>1. </font> The  Bio module is imported \n",
@@ -46,15 +35,38 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
+   "outputs": [],
    "source": [
-    "## <font color='#B9770E' size = 6><b>II. Getting data from DisoMine</b></font>\n",
-    "\n"
+    "import json\n",
+    "\n",
+    "def fasta2json():\n",
+    "    fasta = {}\n",
+    "    with open('P53.fasta') as file_one:\n",
+    "        for line in file_one:\n",
+    "            line = line.strip()\n",
+    "            if not line:\n",
+    "                continue\n",
+    "            if line.startswith(\">\"):\n",
+    "                active_sequence_name = line[1:]\n",
+    "                if active_sequence_name not in fasta:\n",
+    "                    fasta[active_sequence_name] = []\n",
+    "                continue\n",
+    "            sequence = line\n",
+    "            fasta[active_sequence_name].append(sequence)\n",
+    "\n",
+    "    fasta_j = json.loads(json.dumps(fasta))\n",
+    "    \n",
+    "    with open('ProSeqJson.json', 'w+') as outfile:\n",
+    "        json.dump(fasta_j, outfile, indent = 2)\n",
+    "\n",
+    "fasta2json()"
    ]
   },
   {
@@ -65,9 +77,10 @@
     }
    },
    "source": [
-    "### <center><font color='2471A3' size = 6><b>The getDataFrom DisoMine Function</b></font>\n",
+    "## <font color='#B9770E' size = 6><b>DisoMine</b></font>\n",
+    "\n",
     "#### This function accepts a JSON file as input and returns the DisoMine results as output.\n",
-    "#### Here two modules are used (\"requests\" and \"json\")\n"
+    "#### Here two modules are used (\"requests\" and \"json\")"
    ]
   },
   {
@@ -78,84 +91,13 @@
     }
    },
    "source": [
-    "#### <font color='2471A3' size = 5>The Steps:</font>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "###### <font color='2471A3' size = 4.5>1. </font> Accepts a JSON file as an input "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "###### <font color='2471A3' size = 4.5>2. </font> Reads the file using the \"JSON\" module.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "###### <font color='2471A3' size = 4.5>3. </font>Defines a variable for our API URL.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "###### <font color='2471A3' size = 4.5>4. </font> Makes POST request with JSON input body using \"post\" (It accepts two urguments: I. API URL, and II. JSON file )\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "###### <font color='2471A3' size = 4.5>5. </font>Validates the response using status_code (Status 202 indicates that request has been accepted for processing)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
+    "#### <font color='2471A3' size = 5>The Steps:</font>\n",
+    "###### <font color='2471A3' size = 4.5>1. </font> Accepts a JSON file as an input \n",
+    "###### <font color='2471A3' size = 4.5>2. </font> Reads the file using the \"JSON\" module.\n",
+    "###### <font color='2471A3' size = 4.5>3. </font>Defines a variable for our API URL.\n",
+    "###### <font color='2471A3' size = 4.5>4. </font> Makes POST request with JSON input body using \"post\" (It accepts two urguments: I. API URL, and II. JSON file )\n",
+    "###### <font color='2471A3' size = 4.5>5. </font>Validates the response using status_code (Status 202 indicates that request has been accepted for processing)\n",
     "###### <font color='2471A3' size = 4.5>6. </font>Makes GET request to check queue request status. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "#### <font color='2471A3' size = 5>The whole function (DisoMine):</font>"
    ]
   },
   {
@@ -248,89 +190,16 @@
     }
    },
    "source": [
-    "# <font color='#B9770E' size = 6><b>I. Getting data from DynaMine </b></font>\n",
+    "# <font color='#B9770E' size = 6><b>DynaMine </b></font>\n",
     "\n",
     "\n",
     "#### Creating a JSON interface which accept a json_api_key. It has six methods:\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "\n",
-    "###### a. submit_sequence:  \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "###### b. submit_uniprot_ids:\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "###### c. submit_job: \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "###### d. dynamine_request:\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "###### e. poll_results: \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
+    "###### a. submit_sequence:  \n",
+    "###### b. submit_uniprot_ids:\n",
+    "###### c. submit_job: \n",
+    "###### d. dynamine_request:\n",
+    "###### e. poll_results: \n",
     "###### f. print_progress:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "#### <font color='2471A3' size = 5>The whole function (DynaMine):</font>"
    ]
   },
   {
@@ -459,62 +328,11 @@
     }
    },
    "source": [
-    "# <font color='#B9770E' size = 6><b> Plotting DisoMine, DynaMine and EFoldMine Results </b></font>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### 1. Reads the JSON formatted result\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### 2. Defines an index for each residue\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### 3. Defines the corresponding scores for each residue\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
+    "# <font color='#B9770E' size = 6><b> Plotting DisoMine, DynaMine and EFoldMine Results </b></font>\n",
+    "### 1. Reads the JSON formatted result\n",
+    "### 2. Defines an index for each residue\n",
+    "### 3. Defines the corresponding scores for each residue\n",
     "### 4. Creats the plot using \"figure\", \"add_subplot\" and \"show\" "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "#### <font color='2471A3' size = 5>The whole function (Plitting):</font>"
    ]
   },
   {
@@ -593,51 +411,10 @@
    "source": [
     "\n",
     "# <font color='#B9770E' size = 6><b>Getting data from DEOGEN2</b></font>\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "###### <font color='2471A3' size = 4.5>1. </font>Defining the api-endpoint \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "###### <font color='2471A3' size = 4.5>2. </font>Data to be sent to api \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
+    "\n",
+    "###### <font color='2471A3' size = 4.5>1. </font>Defining the api-endpoint \n",
+    "###### <font color='2471A3' size = 4.5>2. </font>Data to be sent to api \n",
     "###### <font color='2471A3' size = 4.5>3. </font>Make POST request with Input body "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "#### <font color='2471A3' size = 5>The whole function (DEOGEN2):</font>"
    ]
   },
   {
@@ -698,62 +475,11 @@
     }
    },
    "source": [
-    "### Plotting graph from DEOGEN2 Result "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "###### <font color='2471A3' size = 4.5>3. </font>Read input Json file "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "###### <font color='2471A3' size = 4.5>3. </font>Mutation DEOGEN2 scores "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "###### <font color='2471A3' size = 4.5>3. </font>Creating a plot "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
+    "### Plotting graph from DEOGEN2 Result \n",
+    "###### <font color='2471A3' size = 4.5>3. </font>Read input Json file \n",
+    "###### <font color='2471A3' size = 4.5>3. </font>Mutation DEOGEN2 scores\n",
+    "###### <font color='2471A3' size = 4.5>3. </font>Creating a plot \n",
     "###### <font color='2471A3' size = 4.5>3. </font>ploting the DEOGEN2 results "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "#### <font color='2471A3' size = 5>The whole function (plotting DEOGEN2):</font>"
    ]
   },
   {
