--- a/BioSB_2019.ipynb
+++ b/BioSB_2019.ipynb
@@ -77,8 +77,8 @@
     "    return dic\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "    #fasta = {'mySeq': \"ENTERYERSEQENCEHEREPLEASECHANGE\"}\n",
     "    fasta = \"P53.fasta\"\n",
+    "    #fasta = {'mySeq': \"ENTERYERSEQENCEHEREPLEASECHANGE\"} # You may uncomment it and write your preferred sequence..\n",
     "    results = fasta2json(fasta)\n",
     "    print(results)"
    ]
@@ -184,8 +184,7 @@
     "    f.write(json)\n",
     "    f.close()\n",
     "    \n",
-    "print(results)\n",
-    "    "
+    "print(results)"
    ]
   },
   {
@@ -341,9 +340,7 @@
     "json = json.dumps(results)\n",
     "f = open(\"dynamine_output.json\", \"w\")\n",
     "f.write(json)\n",
-    "f.close()\n",
-    "\n",
-    "\n"
+    "f.close()"
    ]
   },
   {
@@ -423,7 +420,7 @@
     "axes.plot(range(len(seq)), efoldmine)\n",
     "axes.set_title(\"EFoldMine\")\n",
     "\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -436,6 +433,8 @@
    "source": [
     "\n",
     "## Getting data from DEOGEN2\n",
+    "\n",
+    "###### - The first function is for getting deogen2 sequence id from the uniprot id. \n",
     "\n",
     "###### - Defines the api-endpoint  and the data to be sent. \n",
     "###### - Make POST request with Input body "
@@ -466,9 +465,10 @@
     "from bs4 import BeautifulSoup\n",
     "\n",
     "# A function for getting sequence id from sequence uniprot ID.\n",
-    "def seq_prefix2seq_id(seq_prefix):\n",
+    "# You can enter the uniprot id of your preferred human protein sequence.  \n",
+    "def seq_uniprot_id2seq_id(seq_prefix):\n",
     "\n",
-    "    # Set the URL you want to webscrape from\n",
+    "    # Set the URL to webscrape from\n",
     "    url = 'https://deogen2.mutaframe.com/sequence_finder.php?152539&sequence_prefix='+seq_prefix\n",
     "\n",
     "    # Connect to the URL\n",
@@ -481,8 +481,10 @@
     "    sequence_id = mo[18:]\n",
     "    print(sequence_id)\n",
     "    return sequence_id\n",
-    "\n",
-    "seq_prefix2seq_id('P36897')\n",
+    "     \n",
+    "seq_uniprot_id = 'P36897'\n",
+    "#seq_uniprot_id = '' # You may uncomment it and write the uniprot id of your preferred human protein.\n",
+    "seq_uniprot_id2seq_id(seq_uniprot_id )\n",
     "\n",
     "# Getting data from DEOGEN2.\n",
     "def getDataFromDEOGEN2(sequence_id, mutation):\n",
@@ -511,8 +513,7 @@
     "\n",
     "if __name__ == '__main__':\n",
     "  results = getDataFromDEOGEN2(64689, 'N45S')\n",
-    "  print(results)\n",
-    "\n"
+    "  print(results)"
    ]
   },
   {
