--- a/BioSB_2019.ipynb
+++ b/BioSB_2019.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -52,16 +52,11 @@
    "source": [
     "import json\n",
     "\n",
-    "def fasta2json(fasta):\n",
-    "    \"\"\"\n",
-    "    Read fasta-format file fil, return dict of form scaffold:sequence.\n",
-    "    Note: Uses only the unique identifier of each sequence, rather than the\n",
-    "    entire header, for dict keys.\n",
-    "    \"\"\"\n",
+    "def read_fasta(fileName):\n",
     "    dic = {}\n",
     "    cur_scaf = ''\n",
     "    cur_seq = []\n",
-    "    for line in open(fasta):\n",
+    "    for line in open(fileName):\n",
     "        if line.startswith(\">\") and cur_scaf == '':\n",
     "            cur_scaf = line[1:-1].split(' ')[0]\n",
     "        elif line.startswith(\">\") and cur_scaf != '':\n",
@@ -70,17 +65,23 @@
     "            cur_seq = []\n",
     "        else:\n",
     "            cur_seq.append(line.rstrip())\n",
-    "    dic[cur_scaf] = ''.join(cur_seq)\n",
+    "            dic[cur_scaf] = ''.join(cur_seq)\n",
+    "    return dic\n",
     "\n",
+    "def fasta2json(dic):\n",
+    "    \"\"\"\n",
+    "    Read fasta-format file fil, return dict of form scaffold:sequence.\n",
+    "    \"\"\"\n",
     "    with open('output.json', 'w+') as outfile:\n",
     "        json.dump(dic, outfile, indent=4)\n",
     "    return dic\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "    fasta = \"P53.fasta\"\n",
-    "    #fasta = {'mySeq': \"ENTERYERSEQENCEHEREPLEASECHANGE\"} # You may uncomment it and write your preferred sequence..\n",
-    "    results = fasta2json(fasta)\n",
-    "    print(results)"
+    "    dic = read_fasta(\"P53.fasta\")\n",
+    "\n",
+    "#dic = {'mySeq': \"ENTERYERSEQENCEHEREPLEASECHANGE\"}\n",
+    "results = fasta2json(dic)\n",
+    "print(results)\n"
    ]
   },
   {
@@ -124,41 +125,6 @@
     "import requests\n",
     "import json\n",
     "import time\n",
-    "\n",
-    "def read_fasta(fileName):\n",
-    "    dic = {}\n",
-    "    cur_scaf = ''\n",
-    "    cur_seq = []\n",
-    "    for line in open(fileName):\n",
-    "        if line.startswith(\">\") and cur_scaf == '':\n",
-    "            cur_scaf = line[1:-1].split(' ')[0]\n",
-    "        elif line.startswith(\">\") and cur_scaf != '':\n",
-    "            dic[cur_scaf] = ''.join(cur_seq)\n",
-    "            cur_scaf = line[1:-1].split(' ')[0]\n",
-    "            cur_seq = []\n",
-    "        else:\n",
-    "            cur_seq.append(line.rstrip())\n",
-    "    dic[cur_scaf] = ''.join(cur_seq)\n",
-    "    return dic\n",
-    "\n",
-    "def fasta2json(dic):\n",
-    "    \"\"\"\n",
-    "    Read fasta-format file fil, return dict of form scaffold:sequence.\n",
-    "    Note: Uses only the unique identifier of each sequence, rather than the\n",
-    "    entire header, for dict keys.\n",
-    "    \"\"\"\n",
-    "    with open('output.json', 'w+') as outfile:\n",
-    "        json.dump(dic, outfile, indent=4)\n",
-    "    return dic\n",
-    "\n",
-    "if __name__ == '__main__':\n",
-    "    dic = read_fasta(\"P53.fasta\")\n",
-    "\n",
-    "#dic = {'mySeq': \"ENTERYERSEQENCEHEREPLEASECHANGE\"}\n",
-    "results = fasta2json(dic)\n",
-    "print(results)\n",
-    "\n",
-    "\n",
     "WAIT_TIME = 5\n",
     "TOTAL_TIME = 60\n",
     "def getDataFromDisoMine():\n",
