--- a/BioSB_2019.ipynb
+++ b/BioSB_2019.ipynb
@@ -360,6 +360,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: matplotlib in /anaconda3/lib/python3.7/site-packages (3.0.2)\r\n",
+      "Requirement already satisfied: numpy>=1.10.0 in /anaconda3/lib/python3.7/site-packages (from matplotlib) (1.15.4)\r\n",
+      "Requirement already satisfied: cycler>=0.10 in /anaconda3/lib/python3.7/site-packages (from matplotlib) (0.10.0)\r\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /anaconda3/lib/python3.7/site-packages (from matplotlib) (1.0.1)\r\n",
+      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /anaconda3/lib/python3.7/site-packages (from matplotlib) (2.3.0)\r\n",
+      "Requirement already satisfied: python-dateutil>=2.1 in /anaconda3/lib/python3.7/site-packages (from matplotlib) (2.7.5)\r\n",
+      "Requirement already satisfied: six in /anaconda3/lib/python3.7/site-packages (from cycler>=0.10->matplotlib) (1.12.0)\r\n",
+      "Requirement already satisfied: setuptools in /anaconda3/lib/python3.7/site-packages (from kiwisolver>=1.0.1->matplotlib) (40.6.3)\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "! python3 -mpip install matplotlib  # install the required package."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {
     "slideshow": {
@@ -438,6 +462,31 @@
     "\n",
     "###### - Defines the api-endpoint  and the data to be sent. \n",
     "###### - Make POST request with Input body "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting bs4\n",
+      "  Downloading https://files.pythonhosted.org/packages/10/ed/7e8b97591f6f456174139ec089c769f89a94a1a4025fe967691de971f314/bs4-0.0.1.tar.gz\n",
+      "Requirement already satisfied: beautifulsoup4 in /anaconda3/lib/python3.7/site-packages (from bs4) (4.6.3)\n",
+      "Building wheels for collected packages: bs4\n",
+      "  Building wheel for bs4 (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Stored in directory: /Users/Niloofar/Library/Caches/pip/wheels/a0/b0/b2/4f80b9456b87abedbc0bf2d52235414c3467d8889be38dd472\n",
+      "Successfully built bs4\n",
+      "Installing collected packages: bs4\n",
+      "Successfully installed bs4-0.0.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "! pip install bs4  # install the required package"
    ]
   },
   {
