Added additional info and links.

--- a/BioSB_2019.ipynb
+++ b/BioSB_2019.ipynb
@@ -225,7 +225,9 @@
     "6. poll_results: The job ID is the input and return a discription of the submitted request.  \n",
     "7. print_progress:  It accepts the status and flag as the inputs abd based on  the status of the request ('queued' , 'running' or 'completed' ) it:\n",
     "* Changes the state of the  '_running' boolean.\n",
-    "* Gives the status while processing the request."
+    "* Gives the status while processing the request.\n",
+    "\n",
+    "You can also access the [DynaMine server](http://dynamine.ibsquare.be/) directly, where you can also find information on the meaning of the predictions."
    ]
   },
   {
@@ -487,7 +489,9 @@
     "The second part of this tutorial covers the prediction of the (likely) effect of single amino acid variants of human proteins on the organism. These can be deleterious (bad) for the human, or have no effect. To do so we are using the DEOGEN2 server, and then visualise the prediction scores. The steps are:\n",
     "\n",
     "1. Get the internal deogen2 sequence id from a uniprot id. `seq_uniprot_id2seq_id`\n",
-    "2. Send the data using a POST request and wait for the results `getDataFromDEOGEN2` Note that this function will get all the scores for all possible single amino acid variants in this protein."
+    "2. Send the data using a POST request and wait for the results `getDataFromDEOGEN2` Note that this function will get all the scores for all possible single amino acid variants in this protein.\n",
+    "\n",
+    "You can also access the [DEOGEN2 MutaFrame server](http://deogen2.mutaframe.com/) directly, where you can also find information on the meaning of the predictions."
    ]
   },
   {
